[gd_scene load_steps=4 format=3 uid="uid://bw585chtqxktl"]

[ext_resource type="Script" path="res://ui/collectible_card.gd" id="1_5xgjg"]
[ext_resource type="Theme" uid="uid://5c6ik58qnw2u" path="res://ui/fita_theme.tres" id="1_turvf"]
[ext_resource type="Texture2D" uid="uid://cnx8sd80vyyxn" path="res://assets/frame_varied.png" id="2_cyq3q"]

[node name="CollectibleCard" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50
script = ExtResource("1_5xgjg")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_cyq3q")
region_rect = Rect2(400, 664, 128, 128)
patch_margin_left = 100
patch_margin_top = 100
patch_margin_right = 100
patch_margin_bottom = 100

[node name="TextureRect" type="ColorRect" parent="."]
visible = false
layout_mode = 2
theme = ExtResource("1_turvf")
color = Color(0.454902, 0.662745, 0.666667, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_turvf")
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("1_turvf")
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_turvf")
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_turvf")
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_turvf")
text = "Fita"

[node name="TitleText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme = ExtResource("1_turvf")
text = "lololo"
fit_content = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource("1_turvf")
theme_override_constants/separation = 10

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_turvf")
text = "Quan?"

[node name="TimeText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme = ExtResource("1_turvf")
text = "2024"
fit_content = true

[node name="ImpacteTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_turvf")
text = "Impacte qualitatiu en l’equip?
"

[node name="ImpacteText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme = ExtResource("1_turvf")
text = "lorem ipsum"
fit_content = true

[node name="HowTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_turvf")
text = "Què ha estat més útil per aconseguir-ho?"

[node name="HowText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme = ExtResource("1_turvf")
text = "lorem ipsum one more time"
fit_content = true

[node name="WhyTitle" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_turvf")
text = "Quin valor afegit ha aportat a la cooperativa?"

[node name="WhyText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme = ExtResource("1_turvf")
text = "lorem ipsum one more time"
fit_content = true
